Fixing white space on mobile

--- a/src/styles/BoardPage.css
+++ b/src/styles/BoardPage.css
@@ -13,16 +13,23 @@
   max-width: 850px;
 }
 
+.board-player-row {
+  background-color: aquamarine;
+}
+
 .board-page-player-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   width: 90%;
+  padding-bottom: 40px;
 }
 
 .board-page-player-card {
   min-width: 80%;
   display: flex;
   justify-content: center;
+  margin: 30px;
+  padding: 30px;
 }
